# cambridge-dictionary-anki-sync-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
anki_sync_server/: __init__.py  __main__.py  thread.py  utils.py
anki_sync_server/anki/: anki.py  cloze_note.py  fields_injector.py  media_creator.py  model_creator.py  note_creator.py  template_injector.py
anki_sync_server/assets/: anki_card_model.json
anki_sync_server/assets/template/: back.html  front.html  styling.css
anki_sync_server/server/: __init__.py  api_v1.py  authentication.py  main.py  task_status.py  token_issuer.py
anki_sync_server/setup/: anki_session_setup_step.py  credential_storage.py  gcp_tts_setup_step.py  server_api_key_setup_step.py  setup_step.py  setup_wizard.py
anki_sync_server/tasks/: card_creation_task.py  celery_app.py
anki_sync_server/tts/: base.py  google.py
docker/nginx/: nginx.conf
docker/tunnel/: Dockerfile
openspec/: project.md
openspec/changes/add-celery-background-worker/: design.md  proposal.md  (+1 more)
test/: utils_test.py
test/anki/: fields_injector_test.py  media_creator_test.py  model_creator_test.py  note_creator_test.py  template_injector_test.py
test/integration/: async_card_creation_test.py
test/server/: anki_lazy_init_test.py  task_status_test.py  token_issuer_test.py
test/setup/: anki_session_setup_step_test.py  credential_storage_test.py  gcp_tts_setup_step_test.py  server_api_key_setup_step_test.py  setup_wizard_test.py
test/tasks/: card_creation_task_test.py
test/tts/: google_test.py
(+8 files in other folders)
